--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -4,21 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoomin'</title>
+    
 </head>
 <body>
     <nav class="navbar navbar-inverse" style="background-color:rgba(255, 255, 255, .15); border:none; position: fixed; top:0; height: 25px;margin-bottom: 2%; width: 100%; box-shadow: 8px; backdrop-filter: blur(8px); z-index: 1;">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" style="color:#A1045A ; font-size:30px;" href="{% url 'home' %}">PicturePatch</a>
-        <a class="navbar-brand" style="color:#A1045A ; font-size:25px;" href="{% url 'home' %}">Home</a>
+        
+        <a class="navbar-brand" style="color:#A1045A ; font-size:25px;" href="">Home</a>
         <a class="navbar-brand" style="color:#A1045A ; font-size:25px;" href="admin/">Admin Dashboard</a>
       </div>
       
       <!-- Adding a search form  -->
+      <div class="col-sm-6 col-md-6">
+            {% if user.is_authenticated %}
+            <ul>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
+                          <span class="caret"></span>
+                      </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li>
+                    <a href="{%url 'newsToday'%}">Home</a>
+                  </li>
+                  <li>
+                    <a href="/accounts/password/change">Change Password</a>
+                  </li>
+                  <li>
+                    <a href="/logout">Logout</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            {% else %}
+            <li>
+              <a class='btn btn-default' href="/accounts/login">Login</a>
+            </li>
+
+            {% endif %}
+          </div>
+
       <div class="col-sm-4 col-md-4 navbar-right">
 
-        <form class="navbar-form" role="search" action="{% url 'search_category' %}">
+        <form class="navbar-form" role="search" action="">
 
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search category" name="image">
