--- a/insta/templates/index.html
+++ b/insta/templates/index.html
@@ -9,7 +9,7 @@
             <div class=" card-header pb-2 row m-0" style="margin-right: 0 !important;">
                 <div style="padding-left: 0px !important;" class="col-8 no-padding d-flex align-items-center">
                     <img class="rounded-circle mr-2 article-img"
-                        src="{{ post.profile.image.url }}">
+                        src="{{ post.user.profile.image.url }}">
                         <a class="mr-2" href="">{{ post.user }}</a>
                 </div>
               
