--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -1,4 +1,4 @@
-{% extends 'insta/base.html' %}
+{% extends 'profile/base.html' %}
 {% block content %}
 <div class="container" style="margin-top:8%">
     <div class="content-section">
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-3">
-                        <img class="rounded-circle account-img" src="{{ user.profile.profile_picture.url }}">
+                        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
                     </div>
                     <div class="col-md-6 mt-3">
                         <div class="media-body">
