--- a/users/templates/django_registration/registration_form.html
+++ b/users/templates/django_registration/registration_form.html
@@ -1,9 +1,12 @@
-{%extends "django_registration/base.html"%} {% load bootstrap3 %}
+{%extends "registration/base.html"%} {% load bootstrap3 %}
 {% block content %}
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4"></div>
+    <div class="col-md-5" style="padding-top: 55px;">
+      <img src="https://ucarecdn.com/f0e65890-b403-4316-8068-d1dd58c8f80f/instagram.png" alt="instagram">
+    </div>
+    <div class="col-md-1"></div>
     <div class="col-md-4">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
@@ -25,6 +28,8 @@
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
+          <p>Already have an account? <a href="/accounts/login/">Sign in</a></p>
+          
 
         </div>
 
