--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -31,7 +31,7 @@
                   </li>
                   
                   <li>
-                    <a href="/logout">Logout</a>
+                    <a href="{% url 'logout'%}">Logout</a>
                   </li>
                 </ul>
               </li>
