--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,8 @@
     <div class="container-fluid">
       <div class="navbar-header">
         
-        <a class="navbar-brand" style="color:#A1045A ; font-size:25px;" href="">Home</a>
+        <a class="navbar-brand" style="color:black ; font-size:25px;" href=""><i class="fa-brands fa-instagram"></i>
+</a>
       </div>
       
       <!-- Adding a search form  -->
@@ -28,6 +30,9 @@
                   </li>
                   <li>
                     <a href="/accounts/password/change">Change Password</a>
+                  </li>
+                  <li>
+                    <a href="/profile">profile</a>
                   </li>
                   
                   <li>
