--- a/users/templates/profile/profile.html
+++ b/users/templates/profile/profile.html
@@ -7,9 +7,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-1"></div>
-                    <div class="col-md-3">
-                        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                    </div>
+                    <div class="col-sm-10 col-md-4 text-center">
+                {% if user.profile.pic%}
+                <img src="../../media/{{user.profile.pic}}" alt="" height="180px" width="180px" class="profile-pic">
+                {% else %}
+                <img src="../../media/images/flower5.jpg" alt="" height="180px" width="180px" class="profile-pic">
+                {% endif %}
+            </div>
                     <div class="col-md-6 mt-3">
                         <div class="media-body">
                             <div class="account-heading"><span class="mr-3 text-secondary username">{{ user.username }}</span>
