--- a/users/templates/django_registration/registration_form.html
+++ b/users/templates/django_registration/registration_form.html
@@ -14,7 +14,8 @@
       <div class="panel panel-default">
 
         <div class="panel-heading">
-          <h3 class="text-center">Sign Up</h3>
+        <img  style="height: 50px; width: 200px;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzFj87v7cdZAMuQzMol5zsNpdwU87kaGE270YOjLf8vIklU9dfvQnZ_yKE5AiLvgttPA&usqp=CAU" alt="" srcset="">
+
         </div>
         <div class="panel-body">
 
