--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -8,18 +8,16 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-inverse" style="background-color:rgba(255, 255, 255, .15); border:none; position: fixed; top:0; height: 25px;margin-bottom: 2%; width: 100%; box-shadow: 8px; backdrop-filter: blur(8px); z-index: 1;">
+    <nav class="navbar navbar-inverse" style="background-color:rgba(255, 255, 255, .15); border:none; position: fixed; top:0; height: 25px;margin-bottom: 10%; width: 100%;">
     <div class="container-fluid">
       <div class="navbar-header">
-        
-        <a class="navbar-brand" style="color:black ; font-size:25px;" href=""><i class="fa-brands fa-instagram"></i>
-</a>
+        <img  style="height: 50px; width: 200px;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzFj87v7cdZAMuQzMol5zsNpdwU87kaGE270YOjLf8vIklU9dfvQnZ_yKE5AiLvgttPA&usqp=CAU" alt="" srcset="">
       </div>
       
       <!-- Adding a search form  -->
       <div class="col-sm-6 col-md-6">
             {% if user.is_authenticated %}
-            <ul>
+            <ul style="list-style-type:none ;">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
                           <span class="caret"></span>
@@ -47,14 +45,23 @@
             </li>
 
             {% endif %}
+
+            <!-- <ul class="navbar-nav" style="margin-top: 15px; font-size: medium;">
+        <a class="nav-item nav-link ml-4" href="{%url 'create_post'%}" style="color: rgb(18, 18, 224);" ><i class="fas fa-plus"></i>New Post</a>
+      </ul> -->
           </div>
 
       <div class="col-sm-4 col-md-4 navbar-right">
-
+        <div>
+          <ul class="navbar-nav" style="font-size:45px; margin-right: 3%;">
+            <a class="nav-item nav-link ml-4" href="{%url 'create_post'%}" style="color:black;margin: 1%;" ><i class="far fa-plus-square"></i></a>
+          </ul>
+        </div>
+      
         <form class="navbar-form" role="search" action="">
 
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search category" name="image">
+            <input type="text" class="form-control" placeholder="Search user" name="image">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
@@ -62,6 +69,7 @@
 
         </form>
       </div>
+      
     </div>
   </nav>
       <!-- search form end -->
