implementing the search function

--- a/insta/templates/index.html
+++ b/insta/templates/index.html
@@ -16,6 +16,7 @@
                 <img src="../../media/images/flower5.jpg" alt="{{ post.user}}" height="50px" width="50px" style="border-radius: 50%;">
                 {% endif %}
                 <strong>{{ post.user}}</strong>
+                <a href="" style="margin-left:1%; font-weight:bold; text-decoration:underline;">Follow</a>
                 </div>      
               
             </div>
