--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -17,7 +17,7 @@
       <!-- Adding a search form  -->
       <div class="col-sm-6 col-md-6">
             {% if user.is_authenticated %}
-            <ul style="list-style-type:none ;">
+            <ul style="list-style-type:none ; margin-top: 1%;">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
                           <span class="caret"></span>
@@ -58,10 +58,10 @@
           </ul>
         </div>
       
-        <form class="navbar-form" role="search" action="">
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search user" name="image">
+            <input type="text" class="form-control" placeholder="Search title" name="post">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
