--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -24,7 +24,7 @@
                       </a>
                 <ul class="dropdown-menu" role="menu">
                   <li>
-                    <a href="">Home</a>
+                    <a href="{% url 'home' %}">Home</a>
                   </li>
                   <li>
                     <a href="/accounts/password/change">Change Password</a>
